--- a/src/App.css
+++ b/src/App.css
@@ -23,17 +23,19 @@ nav{
   justify-content: space-around;
   align-items: center;
   width: 60%;
-  /* background: pink; */
 }
 .nav-links{
   padding-left: 20px;
-  margin-left: 60px;
+  margin-left: 100px;
+}
+.nav-links > li {
+  padding-left: 10px;
+  min-width: 100px;
 }
 nav > .nav-minor > ul, .nav-extra{
   display: flex;
   justify-content: space-around;
   align-items: center;
-  /* background: aqua; */
   width: 15rem;
   list-style: none;
   text-transform: uppercase;
@@ -49,15 +51,10 @@ nav > img {
   width: 110px;
   height: 50px;
 }
-
-
-
 .nav-extra {
   width: 80%;
   height: 100%;
   margin: auto;
-  /* background: aqua; */
-  align-text: center;
 }
 n
 .nav-extra > ul > li{
@@ -80,7 +77,8 @@ n
   text-align: left;
   font-weight: 700;
   font-size: 3rem;
-  width: 36.6rem;
+  /* width: 36.6rem; */
+  width: 35rem;
 }
 .experience-1 > p:nth-child(2){
   /* background: pink; */
@@ -91,15 +89,16 @@ n
 .experience-2{
   background:rgba(255, 230, 234, 0.4);
   width: 400px;
-  height: 350px;
+  height: 400px;
   border-radius: 50%;
   margin-left: 100px;
+
 }
 .experience-2 > img{
   padding-top: 20px;
   object-fit: contain;
   width: 400px;
-  height: 400px;
+  /* height: 400px; */
   margin-bottom: 200px;
 }
 .dark-side{
@@ -111,10 +110,10 @@ n
   background: rgb(38, 38, 38);
   color: #fff;
   width: 100%;
-  height: 400px;
+  /* height: 400px; */
   text-align: left;
   /* fix margin for media-width adjustment */
-  margin-top: -70px;
+  margin-top: -88px;
   margin-bottom: 33px;
 }
 .experience-3{
@@ -296,6 +295,21 @@ background: rgb(38, 38, 38);
   height: 300px;
   width: 300px;
   background: white;
+}
+@media(max-width: 700px){
+  .nav-major{
+    display: none;
+  }
+  .dark-side{
+    margin-top: 0px;
+  }
+  /* .logo-style{
+    background-image: url("../images/vasiti.png");
+    background-repeat: no-repeat;
+    width: 10px;
+    height: 20px;
+  } */
+
 }
 
 /* @media(min-width: 500px){
