--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,6 @@
 }
 
 nav{
-  /* min-height: 10vh; */
   height: 80px;
   width: 100%;
   background:#fff;
@@ -65,6 +64,9 @@ n
   width: 100%;
   border-bottom: 1px solid rgba(128, 128, 128, 0.3);
 }
+.vasiti-logo{
+  display: none;
+}
 .experience{
   display: flex;
   flex-wrap: wrap;
@@ -77,11 +79,9 @@ n
   text-align: left;
   font-weight: 700;
   font-size: 3rem;
-  /* width: 36.6rem; */
   width: 35rem;
 }
 .experience-1 > p:nth-child(2){
-  /* background: pink; */
   width: 100%;
   text-align: left;
 }
@@ -98,7 +98,6 @@ n
   padding-top: 20px;
   object-fit: contain;
   width: 400px;
-  /* height: 400px; */
   margin-bottom: 200px;
 }
 .dark-side{
@@ -110,15 +109,11 @@ n
   background: rgb(38, 38, 38);
   color: #fff;
   width: 100%;
-  /* height: 400px; */
   text-align: left;
-  /* fix margin for media-width adjustment */
   margin-top: -88px;
   margin-bottom: 33px;
 }
 .experience-3{
-  /* height: 365px; */
-  /* width: 365px; */
   height: 350px;
   width: 350px;
   background: rgb(51, 51, 51);
@@ -126,7 +121,7 @@ n
 }
 .experience-3 > img{
   width: 350px;
-  height: 350px;
+  height: 332px;
   object-fit: contain;
   margin-bottom: 50px;
 }
@@ -180,7 +175,6 @@ n
 }
 .card-profile > p{
   width: 100%;
-  /* padding: 10px; */
   text-align: left;
 }
 .card-profile > div > span:nth-child(2){
@@ -213,7 +207,6 @@ n
   font-weight: 100;
   padding: 3px;
   color: #FF5C00;
-  /* margin-bottom: 100px; */
 }
 .experience-5 > div > h3{
   font-weight: 400;
@@ -263,7 +256,6 @@ background: rgb(38, 38, 38);
   align-items: center;
   justify-content: space-around;
   flex-wrap: wrap;
-  /* background: aqua */
 }
 .dark-foot > div > div > img{
   position: relative;
@@ -303,26 +295,20 @@ background: rgb(38, 38, 38);
   .dark-side{
     margin-top: 0px;
   }
-  /* .logo-style{
-    background-image: url("../images/vasiti.png");
-    background-repeat: no-repeat;
-    width: 10px;
-    height: 20px;
-  } */
-
+  .vasiti-logo{
+    display: initial;
+    margin: 50px;
+    margin-right: 360px;
+  }
+  .experience-1 > p:nth-child(1){
+    font-size: 2.5rem;
+    width: 30rem;
+  }
+  .experience-1 > p:nth-child(2){
+    width: 80%;
+  }
 }
 
-/* @media(min-width: 500px){
-  .experience-2{
-    margin-bottom: 120px;
-  }
-  .experience-3 {
-    order: 2;
-  }
-  .experience-4{
-    order: 1;
-    margin-top: 200px;
-  }
-} */
+
 
 
