--- a/src/App.css
+++ b/src/App.css
@@ -284,10 +284,93 @@ background: rgb(38, 38, 38);
   font-weight: 400;
 }
 .story-class{
-  height: 300px;
-  width: 300px;
-  background: white;
+  margin: 0px 1.9rem;
+  /* width: 33rem; */
+  width: 87%;
+  /* min-height: 60%; */
+  display: flex;
+  flex-direction: column;
+  background: #fff;
+  text-align: left;
+  padding: 1.3rem;
+  border: 1px solid rgb(179, 179, 179);
+  border-radius: 5px;
 }
+
+.story-class > input, form > .user-name > div > input{
+  outline-color: #FF5C00;
+  /* padding: 15px; */
+  padding: 3%;
+  color: grey;
+  font-size: 1.1rem;
+  border: 1px solid rgb(179, 179, 179);
+  border-radius: 5px;
+}
+form > .user-name{
+  display: flex;
+  justify-content: space-around;
+}
+
+form > .user-name > div > input{
+  width: 12rem;
+}
+textarea{
+  outline-color: #FF5C00;
+  height: 3rem;
+  border: 1px solid rgb(179, 179, 179);
+  border-radius: 5px;
+
+}
+.stories-form{
+  /* display: flex;
+  flex-wrap: wrap; */
+}
+.stories-form h2{
+  /* background: grey; */
+  text-align: center;
+  margin-top: 0;
+}
+form > pre{
+  font-size: 1rem;
+  font-family: initial;
+}
+.story-btn{
+  margin: 2rem 0;
+}
+.modal-bg{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s, opacity 450ms
+}
+.modal-pop{
+  visibility: visible;
+  opacity: 1;
+}
+.x{
+  position: relative;
+  top: 2px;
+  right: 10px;
+  /* background: red; */
+  text-align: right;
+  font-size: 1rem;
+  font-weight: 300;
+  cursor: pointer;
+}
+
+
+
+
+
+
 @media(max-width: 700px){
   .nav-major{
     display: none;
