--- a/src/App.css
+++ b/src/App.css
@@ -3,11 +3,9 @@
   overflow: hidden;
   background: white;
 }
-
 .App-link {
   color: #61dafb;
 }
-
 nav{
   height: 80px;
   width: 100%;
@@ -55,7 +53,6 @@ nav > img {
   height: 100%;
   margin: auto;
 }
-n
 .nav-extra > ul > li{
   list-style: none;
 }
@@ -85,14 +82,12 @@ n
   width: 100%;
   text-align: left;
 }
-
 .experience-2{
   background:rgba(255, 230, 234, 0.4);
   width: 400px;
   height: 400px;
   border-radius: 50%;
   margin-left: 100px;
-
 }
 .experience-2 > img{
   padding-top: 20px;
@@ -156,10 +151,7 @@ n
   text-decoration-line: underline;
   text-decoration-color: #FF5C00;
   cursor: pointer;
-    /* transition: all 1000ms; */
-
 }
-
 .card-profile{
   min-width: 300px;
   background: #fff;
@@ -172,6 +164,7 @@ n
   flex: 1;
 }
 .card-profile > img{
+  object-fit: contain;
   height: 200px;
   width: 200px;
   border-radius: 50%;
@@ -198,7 +191,6 @@ n
   text-align: left;
   padding: 20px;
   background:rgba(255, 230, 234, 0.3);
-
 }
 .experience-5 > div > h1{
   margin-bottom: 5px;
@@ -289,9 +281,7 @@ background: rgb(38, 38, 38);
 }
 .story-class{
   margin: 0px 1.9rem;
-  /* width: 33rem; */
   width: 87%;
-  /* min-height: 60%; */
   display: flex;
   flex-direction: column;
   background: #fff;
@@ -324,12 +314,7 @@ textarea{
   border-radius: 5px;
 
 }
-.stories-form{
-  /* display: flex;
-  flex-wrap: wrap; */
-}
 .stories-form h2{
-  /* background: grey; */
   text-align: center;
   margin-top: 0;
 }
@@ -350,15 +335,9 @@ form > pre{
   display: flex;
   justify-content: center;
   align-items: center;
-  /* visibility: hidden; */
-  /* opacity: 0; */
-  /* transition: visibility 0s, opacity 450ms */
-  /* transition: all 1000ms; */
+ 
 }
-/* .modal-pop{
-  visibility: visible;
-  opacity: 1;
-} */
+
 .x{
   position: relative;
   top: 2px;
