--- a/src/components/ProfilesB.css
+++ b/src/components/ProfilesB.css
@@ -6,6 +6,7 @@
     display: flex;
     flex-wrap: wrap;
     align-items: center;
+    /* justify-content: space-around; */
     margin-top: 30px;
     margin-top: -70px;
   }
