--- a/src/App.css
+++ b/src/App.css
@@ -159,7 +159,7 @@ nav > img {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-items: space-around;
+  /* justify-items: space-around; */
   color: rgb(51, 51, 51);
   flex: 1;
 }
@@ -312,7 +312,9 @@ textarea{
   height: 3rem;
   border: 1px solid rgb(179, 179, 179);
   border-radius: 5px;
-
+  font-size: 1.1rem;
+  color: grey;
+  padding: 3%;
 }
 .stories-form h2{
   text-align: center;
@@ -324,6 +326,17 @@ form > pre{
 }
 .story-btn{
   margin: 2rem 0;
+  display: flex;
+  /* align-items: center; */
+  justify-content: center;
+}
+.story-btn button{
+  background-color: #FF5C00;
+  color: white;
+  font-size: 20px;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
 }
 .modal-bg{
   position: fixed;
